// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit into existing position: depositBase 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 130657,
}
`;

exports[`Deposit into existing position: depositQuote 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 130831,
}
`;

exports[`Liquidation liquidate long position and create new long position 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 266218,
}
`;

exports[`Liquidation liquidate long position and create new position 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 293874,
}
`;

exports[`Liquidation liquidate short position and create new position 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 307222,
}
`;

exports[`Liquidation liquidate short position and create new short position 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 282258,
}
`;

exports[`Open position: depositBase 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 211984,
}
`;

exports[`Open position: depositQuote 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 212130,
}
`;

exports[`System initialized: closePosition 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 235958,
}
`;

exports[`System initialized: depositBase 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 210814,
}
`;

exports[`System initialized: depositBase and long 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 365462,
}
`;

exports[`System initialized: depositQuote 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 210915,
}
`;

exports[`System initialized: depositQuote and short 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 344175,
}
`;

exports[`System initialized: long 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 307275,
}
`;

exports[`System initialized: short 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 285826,
}
`;

exports[`System initialized: withdrawBase 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 180524,
}
`;

exports[`System initialized: withdrawQuote 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 188941,
}
`;

exports[`mc happens: MC long position with deleverage 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 225664,
}
`;

exports[`mc happens: MC long reinit 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 194881,
}
`;

exports[`mc happens: MC short position with deleverage 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 225732,
}
`;

exports[`mc happens: MC short reinit 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 194834,
}
`;

exports[`mc happens: closePosition with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 373460,
}
`;

exports[`mc happens: depositBase with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 259312,
}
`;

exports[`mc happens: depositBase with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 358208,
}
`;

exports[`mc happens: depositQuote with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 250286,
}
`;

exports[`mc happens: depositQuote with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 288592,
}
`;

exports[`mc happens: long closePosition with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 263897,
}
`;

exports[`mc happens: long initialized heap with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 289875,
}
`;

exports[`mc happens: long with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 367096,
}
`;

exports[`mc happens: long with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 387623,
}
`;

exports[`mc happens: short with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 335066,
}
`;

exports[`mc happens: short with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 383055,
}
`;
